--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Global</title>
+  <title>HOMESICK89</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,7 +48,7 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>"INTERNATIONALLY CELEBRATED<br>BASS MUSIC CHAMP<br> -CBC</h1>
+                <h1>"INTERNATIONALLY CELEBRATED<br>BASS MUSIC CHAMP"<br> -CBC</h1>
                 <button class="cta">Bookings
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -61,50 +61,50 @@
               </div>
               <div class="intro--options">
                 <a href="#0">
+                  <h3>INTRO</h3>
+                  <p>Calgary's HomeSick has carved out a lane for himself in the world of high-BPM club music — not just by running the Footwork Jungle online community and the Percolate party series, but also through his own, oftentimes amorphous productions and world-class DJ sets.</p>
+                </a>
+                <a href="#0">
                   <h3>RBMA ALUMNI</h3>
-                  <p>Hosted in Paris, HomeSick participated in Red Bull Music Academy where he was mentored by some of the world’s most prestigious artists and producers in the dance music realm.</p>
+                  <p>October 2015 HomeSick was selected to be a participant at the Red Bull Music Academy hosted in Paris, France, where he was mentored by some of the world’s most prestigious artists and producers in the dance music realm.</p>
                 </a>
                 <a href="#0">
-                  <h3>Chart topper</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
-                </a>
-                <a href="#0">
-                  <h3>Paul &amp; shark</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>WORLDWIDE</h3>
+                  <p>Performances in Spain, France, UK and Germany solidify his status as Western Canada's Bass Music Ambassador.</p>
                 </a>
               </div>
             </div>
           </li>
           <li class="l-section section">
             <div class="work">
-              <h2>Selected work</h2>
+              <h2>Releases</h2>
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="#0">
+                    <a href="https://www.junodownload.com/products/homesick-enviroment-standards/3132504-02/" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-victory.jpg" alt="Victory">
+                        <img src="assets/img/work-environment.jpg" alt="Environment Standards">
                       </div>
-                      <p class="slider--item-title">Victory</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Environment Standards (2016)</p>
+                      <p class="slider--item-description">Four powerful 160bpm club tools including a remix from Detroit's Drum and Bass don, Sinistarr.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
-                    <a href="#0">
+                    <a href="http://www.seclusiasis.com/legendary/" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
+                        <img src="assets/img/work-legendary.jpg" alt="Legendary">
                       </div>
-                      <p class="slider--item-title">Metiew &amp; Smith</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">LEGENDARY (2017)</p>
+                      <p class="slider--item-description">Via Philadelphia powerhouse label Seclusiasis, the release kept the #1 spot in Juno's footwork charts for a full two weeks.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="#0">
+                    <a href="http://smarturl.it/psuy36" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                        <img src="assets/img/work-dataism.jpg" alt="Dataism">
                       </div>
-                      <p class="slider--item-title">Alex Nowak</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">DATAISM (2017)</p>
+                      <p class="slider--item-description">The duo put together a three-track EP of powerful club tools during a visit to the Red Bull Studios in Berlin, Germany.</p>
                     </a>
                   </li>
                 </ul>
@@ -131,7 +131,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
+                <h2>"The Canadian<br>producer putting<br>the dirt back<br>into breakbeat"<br>-Sónar Music Festival</h2>
                 <a href="#0">Career
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -176,7 +176,7 @@
           </li>
           <li class="l-section section">
             <div class="hire">
-              <h2>You want us to do</h2>
+              <h2>Select an option</h2>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
                 <div class="work-request--options">
