--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="hire">
               <h2>Select an option</h2>
               <!-- checkout formspree.io for easy form setup -->
-              <form class="work-request">
+              <form class="work-request" action="https://formspree.io/info@homesick89.com" method="POST">
                 <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
