--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <!-- checkout formspree.io for easy form setup -->
                <form action="https://formspree.io/info@homesick89.com"
                  method="POST">
-                <h1>message</h1><textarea cols="25" rows="7"></textarea> 
+                <h1>name</h1><input type="text" name="name" cols="40" rows="5">
                 <h1>email</h1><input type="email" name="_replyto">
                 <input type="submit" value="Send">
             </form> 
