--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="Bucky Maler">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
+
 <body>
 
 <!-- notification for small viewports and landscape oriented smartphones -->
@@ -38,9 +39,9 @@
         <nav class="l-side-nav">
           <ul class="side-nav">
             <li class="is-active"><span>HomeSick</span></li>
+            <li><span>Releases</span></li>
+            <li><span>Press</span></li>
             <li><span>Listen</span></li>
-            <li><span>About</span></li>
-            <li><span>Contact</span></li>
             <li><span>Bookings</span></li>
           </ul>
         </nav>
@@ -131,8 +132,8 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>"The Canadian<br>producer putting<br>the dirt back<br>into breakbeat"<br>-Sónar Music Festival</h2>
-                <a href="#0">Career
+                <h2>"THE CANADIAN<br>PRODUCER PUTTING<br>THE DIRT BACK<br>INTO BREAKBEAT"<br>-Sónar Music Festival</h2>
+                <a href="#0">Press
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -144,14 +145,14 @@
                 <img src="assets/img/about-visual.png" alt="About Us">
               </div>
               <div class="about--options">
-                <a href="#0">
-                  <h3>Winners</h3>
+                <a href="https://sonar.es/en/2016/artists/homesick" target="_blank">
+                  <h3>Sónar</h3>
                 </a>
-                <a href="#0">
-                  <h3>Philosophy</h3>
+                <a href="https://nmc.ca/cbysk-homesick/" target="_blank">
+                  <h3>NMC</h3>
                 </a>
-                <a href="#0">
-                  <h3>History</h3>
+                <a href="https://nesthq.com/homesick-dont-look-in-the-trunk-premiere/" target="_blank">
+                  <h3>Nest HQ</h3>
                 </a>
               </div>
             </div>
@@ -160,16 +161,8 @@
             <div class="contact">
               <div class="contact--lockup">
                 <div class="modal">
-                  <div class="modal--information">
-                    <p>Pawia 5, 31-154 Kraków, Poland</p>
-                    <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
-                    <a href="tel:+148126287560">+48 12 628 75 60</a>
-                  </div>
-                  <ul class="modal--options">
-                    <li><a href="#0">Bēhance</a></li>
-                    <li><a href="#0">dribbble</a></li>
-                    <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
-                  </ul>
+<iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/328503597&amp;color=%2350504c&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
+
                 </div>
               </div>
             </div>
@@ -181,7 +174,7 @@
               <!-- checkout formspree.io for easy form setup -->
                <form action="https://formspree.io/info@homesick89.com"
                  method="POST">
-                <h1>name</h1><input type="text" name="name" cols="40" rows="5">
+                <h1>name</h1><input type="text" name="name">
                 <h1>email</h1><input type="email" name="_replyto">
                 <input type="submit" value="Send">
             </form> 
@@ -193,15 +186,16 @@
   </div>
   <ul class="outer-nav">
     <li class="is-active">Home</li>
-    <li>Works</li>
-    <li>About</li>
-    <li>Contact</li>
-    <li>Hire us</li>
+    <li>Releases</li>
+    <li>Press</li>
+    <li>Listen</li>
+    <li>Bookings</li>
   </ul>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
 <script src="assets/js/functions-min.js"></script>
+
 </body>
 </html>
