mobile layout update

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
               </div>
               <div class="intro--options">
                 <a href="#0">
-                  <h3>INTRO</h3>
+                  <h3>INTRODUCTION</h3>
                   <p>Calgary's HomeSick has carved out a lane for himself in the world of high-BPM club music — not just by running the Footwork Jungle online community and the Percolate party series, but also through his own, oftentimes amorphous productions and world-class DJ sets.</p>
+                </a>
+                <a href="#0">
+                  <h3>2017 IN REVIEW</h3>
+                   <p>After proving himself abroad in 2016 with performances at Barcelona’s Sonar Music Festival and Leipzig’s Distillery club, summer 2017 saw his invitation to perform at Bass Coast, Sled Island and Fozzy Fest back home in Western Canada.</p>
                 </a>
                 <a href="#0">
                   <h3>RBMA ALUMNI</h3>
                   <p>October 2015 HomeSick was selected to be a participant at the Red Bull Music Academy hosted in Paris, France, where he was mentored by some of the world’s most prestigious artists and producers in the dance music realm.</p>
-                </a>
-                <a href="#0">
-                  <h3>WORLDWIDE</h3>
-                  <p>Performances in Spain, France, UK and Germany solidify his status as Western Canada's Bass Music Ambassador.</p>
                 </a>
               </div>
             </div>
