--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </a>
                 <a href="#0">
                   <h3>2017 IN REVIEW</h3>
-                   <p>After proving himself abroad in 2016 with performances at Barcelona’s Sonar Music Festival and Leipzig’s Distillery club, summer 2017 saw his invitation to perform at Bass Coast, Sled Island and Fozzy Fest back home in Western Canada.</p>
+                   <p>After performing abroad in 2016 with slots at Barcelona’s Sonar Music Festival and Leipzig’s Distillery, the summer of 2017 saw his invitation to perform at Bass Coast, Sled Island and Fozzy Fest back home in Western Canada.</p>
                 </a>
                 <a href="#0">
                   <h3>RBMA ALUMNI</h3>
@@ -161,7 +161,7 @@
             <div class="contact">
               <div class="contact--lockup">
                 <div class="modal">
-<iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/328503597&amp;color=%2350504c&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
+                <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/328503597&amp;color=%2350504c&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
 
                 </div>
               </div>
