--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                   <p>Calgary's HomeSick has carved out a lane for himself in the world of high-BPM club music — not just by running the Footwork Jungle online community and the Percolate party series, but also through his own, oftentimes amorphous productions and world-class DJ sets.</p>
                 </a>
                 <a href="#0">
-                  <h3>2017 IN REVIEW</h3>
-                   <p>After performing abroad in 2016 with slots at Barcelona’s Sonar Music Festival and Leipzig’s Distillery, the summer of 2017 saw his invitation to perform at Bass Coast, Sled Island and Fozzy Fest back home in Western Canada.</p>
+                  <h3>WORLD TOUR 2019</h3>
+                   <p>HomeSick is currently fielding dates for a tour with accross Europe, the UK and Canada, in support of his upcoming release with German record label Defrostatica. <br><br>Get in contact to bring HomeSick to your city.</p>
                 </a>
                 <a href="#0">
                   <h3>RBMA ALUMNI</h3>
@@ -82,30 +82,30 @@
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="https://www.junodownload.com/products/homesick-enviroment-standards/3132504-02/" target="_blank">
+                    <a href="https://soundcloud.com/foreverhomesick/sets/inside-looking-out" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-environment.jpg" alt="Environment Standards">
+                        <img src="assets/img/work-inside.jpg" alt="Inside Looking Out">
                       </div>
-                      <p class="slider--item-title">Environment Standards (2016)</p>
-                      <p class="slider--item-description">Four powerful 160bpm club tools including a remix from Detroit's Drum and Bass don, Sinistarr.</p>
+                      <p class="slider--item-title">INSIDE LOOKING OUT (2018)</p>
+                      <p class="slider--item-description">2 powerful club tools self-released as a taste of what's to come in 2019.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
-                    <a href="http://www.seclusiasis.com/legendary/" target="_blank">
+                   
                       <div class="slider--item-image">
-                        <img src="assets/img/work-legendary.jpg" alt="Legendary">
+                        <img src="assets/img/work-burnout.jpg" alt="Burnout 2099">
                       </div>
-                      <p class="slider--item-title">LEGENDARY (2017)</p>
-                      <p class="slider--item-description">Via Philadelphia powerhouse label Seclusiasis, the release kept the #1 spot in Juno's footwork charts for a full two weeks.</p>
-                    </a>
+                      <p class="slider--item-title">BURNOUT 2099 (FEBRUARY 2019)</p>
+                      <p class="slider--item-description">Debut 12" vinyl record on Germany's Defrostatica Records.</p>
+                    
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="http://smarturl.it/psuy36" target="_blank">
+                    <a href="https://fanlink.to/33a" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-dataism.jpg" alt="Dataism">
+                        <img src="assets/img/work-walk.jpg" alt="Walk">
                       </div>
-                      <p class="slider--item-title">DATAISM (2017)</p>
-                      <p class="slider--item-description">The duo put together a three-track EP of powerful club tools during a visit to the Red Bull Studios in Berlin, Germany.</p>
+                      <p class="slider--item-title">WALK (2018)</p>
+                      <p class="slider--item-description">A rare dive into the slower side of club music, Walk utlizes pumping synths and strong breaks.</p>
                     </a>
                   </li>
                 </ul>
