--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/introduction-visual.png" alt="Welcome">
+                <img src="assets/img/introduction-visual2.png" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="#0">
@@ -67,7 +67,7 @@
                 </a>
                 <a href="#0">
                   <h3>WORLD TOUR 2019</h3>
-                   <p>HomeSick is currently fielding dates for a tour with accross Europe, the UK and Canada, in support of his upcoming release with German record label Defrostatica. <br><br>Get in contact to bring HomeSick to your city.</p>
+                   <p>HomeSick is currently fielding dates for a tour with across Europe, the UK and Canada, in support of his upcoming release with German record label Defrostatica. Get in contact to bring HomeSick to your city.</p>
                 </a>
                 <a href="#0">
                   <h3>RBMA ALUMNI</h3>
@@ -161,7 +161,7 @@
             <div class="contact">
               <div class="contact--lockup">
                 <div class="modal">
-                <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/328503597&amp;color=%2350504c&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
+                  <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/46640088&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 
                 </div>
               </div>
